[package]
name = "tracer-cli"
version = "0.3.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.18", features = ["cargo"]}
prettytable-rs = "0.9.0"
lazy_static = "1.4.0"
log = "0.4" 
ureq ={version = "2.5.0", features = ["json"]}
url = "2.3.1"
serde = { version = "1", features = ["derive"] }
regex = "1.6.0"
serde_json = "1.0"
oauth2-cmd = {path ="oauth2-cmd"}
chrono = "0.4.22"

[profile.release]
lto = true
