[package]
name = "oauth2-cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq ={version = "2.5.0", features = ["json"]}
serde = { version = "1", features = ["derive"] }
dirs = "4.0.0"
url = "2.3.1"
tiny_http = "0.11"
opener = "0.5.0"

[[example]]
name ="core"
path = "example/base.rs"


[profile.release]
panic = 'abort'
